--- a/kortex_driver/package.xml
+++ b/kortex_driver/package.xml
@@ -10,6 +10,7 @@
   <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ros_environment</buildtool_depend>
 
   <depend>hardware_interface</depend>
   <depend>kortex_api</depend>
